--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,32 @@
+*{
+    margin: 0;
+    padding: 0;
+    margin: 0;
+}
 
+header{
+    background-color:yellowgreen;
+    width: 95%;
+}
+
+body{
+    background-color: cornflowerblue;
+    color: beige;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-style: italic;
+    font-size: 15px;
+    display: grid;
+    place-items: center;
+}
+
+section{
+    box-sizing: border-box;
+    margin: 1rem;
+    padding: 1rem;
+    border: solid 2px;
+    background-color:yellowgreen;
+    border-radius: 1.5rem 3rem;
+    opacity: 85%;
+    width: 35rem;
+}
 
